bundling docbook 4 now make and make web works

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 docs/*.cache
+docs/*.fot
 docs/Makefile
 docs/config.*
 docs/configure
+docs/html
 docs/manual.xml
-docs/version.ent
+docs/phpweb
 /templates_c
