--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ docs/Makefile
 docs/config.*
 docs/configure
 docs/diff
+docs/dsssl/html-common.dsl
 docs/entities/version.ent
 docs/html
 docs/manual.xml
