enable russian PDF builds

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 * text=auto !eol
+docs/fop/thryb.ttf -text
+docs/fop/thrybi.ttf -text
+docs/fop/thryi.ttf -text
+docs/fop/thryn.ttf -text
 misc/smarty_icon.gif -text
