--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,15 @@
     ],
     "support": {
         "irc": "irc://irc.freenode.org/smarty",
-        "issues": "http://code.google.com/p/smarty-php/issues/list",
+        "issues": "https://github.com/smarty-php/smarty/issues",
         "forum": "http://www.smarty.net/forums/"
     },
     "require": {
         "php": ">=5.2"
+    },
+    "require-dev": {
+        "smarty/smarty-phpunit": "~3.1@dev",
+        "smarty/smarty-lexer": "~3.1@dev"
     },
     "autoload": {
         "classmap": [
