add require-dev to load PHPUnit tests and lxer/parser generator (reverted from commit f3d7b05ccb77aee4caff6849706dea550b0df25d)

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "support": {
         "irc": "irc://irc.freenode.org/smarty",
-        "issues": "http://code.google.com/p/smarty-php/issues/list",
+        "issues": "https://github.com/smarty-php/smarty/issues",
         "forum": "http://www.smarty.net/forums/"
     },
     "require": {
