--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.2
   - 5.3
   - 5.4
   - 5.5
@@ -15,7 +14,7 @@ allow_failures:
     - php: hhvm-nightly
 
 install:
-   - composer require smarty/smarty-php:3.1.22
+   - composer require smarty/smarty-phpunit:3.1.22
 
 
 script: phpunit --configuration ../smarty-php/phpunit.xml
