--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ install:
    - composer require smarty/smarty-phpunit:3.1.22
 
 
-script: phpunit --configuration ../smarty-php/phpunit.xml
+script: phpunit --configuration ../smarty-phpunit/phpunit.xml
