--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ allow_failures:
     - php: hhvm-nightly
 
 install:
-   - git://github.com/smarty-php/smarty-phpunit.git
+   - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git smarty-php/smarty-phpunit
 
 
 script: phpunit --configuration ./../smarty-phpunit/phpunit.xml
