--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,8 @@ allow_failures:
 
 install:
    - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
+
+script:
    - cd smarty-phpunit
+   - phpunit ./
 
