--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 
 allow_failures:
     - php: nightly
+    - php: hhvm
 
 install:
    - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
