--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,13 @@ php:
   - 7.0
   - hhvm
 
-allow_failures:
+matrix:
+  allow_failures:
     - php: hhvm
+
+before_script:
+    - travis_retry composer self-update
+    - travis_retry composer --prefer-source --dev install
 
 install:
    - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
