--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.2
   - 5.3
   - 5.4
   - 5.5
@@ -12,6 +11,9 @@ php:
 matrix:
   allow_failures:
     - php: hhvm
+
+before_script:
+    - travis_retry composer --prefer-source --dev install
 
 install:
    - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
