--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,13 @@ php:
   - 7.0
   - hhvm
 
-
+services:
+  - memcached
+  - mysql
+  
 before_script:
     - travis_retry composer --prefer-source --dev install
+    - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 install:
    - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
