--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 php:
+  - 5.2
   - 5.3
   - 5.4
   - 5.5
@@ -13,7 +14,7 @@ services:
   - mysql
   
 before_script:
-    - travis_retry composer --prefer-source --dev install
+    - if [ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]; then travis_retry composer --prefer-source --dev install; fi
     - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 install:
