--- a/.gitattributes
+++ b/.gitattributes
@@ -1,29 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-# Custom for Visual Studio
-*.cs     diff=csharp
-*.sln    merge=union
-*.csproj merge=union
-*.vbproj merge=union
-*.fsproj merge=union
-*.dbproj merge=union
-
-# Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
-
 # exclude from git export
 /travis.ini export-ignore
-/composer.json export-ignore
+/myconfig.ini export-ignore
 /.travis.yml export-ignore
 /.gitignore export-ignore
 /.gitattributes export-ignore
