--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ services:
 before_script:
     - if [ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]; then travis_retry composer --prefer-source --dev install; fi
     - if [ ${TRAVIS_PHP_VERSION:0:3} <= "5.6" ]; then  phpenv config-add travis.ini; fi
-    - if [ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]; then  phpenv config-add myconfig.ini; fi
+    - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  phpenv config-add myconfig.ini; fi
     - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 install:
