--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
   - 5.5
   - 5.6
   - 7.0
-  - 7.1.9
+  - 7.1
 
 
 services:
@@ -24,7 +24,8 @@ before_script:
     - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 install:
-   - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
+   - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  composer global install phpunit/phpunit 6.1.*; fi
+    - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
 
 script:
    - cd smarty-phpunit
