--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
     - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 install:
-   - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  composer global install phpunit/phpunit 6.1.*; fi
+   - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  composer global install phpunit/phpunit 6.4.1; fi
     - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
 
 script:
