--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_script:
     - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 install:
-   - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  composer global install phpunit/phpunit 6.4.1; fi
-    - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
+     - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
+     - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  composer global install phpunit/phpunit 6.4.1
 
 script:
    - cd smarty-phpunit
