--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ services:
 before_script:
     - if [ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]; then travis_retry composer --prefer-source --dev install; fi
     - if [ ${TRAVIS_PHP_VERSION:0:3} <= "5.6" ]; then  phpenv config-add travis.ini; fi
-    - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]; then  composer global require phpunit/phpunit 6.4.1; fi
+    - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  composer global require phpunit/phpunit 6.4.1; fi
     - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 install:
@@ -28,7 +28,7 @@ install:
 
 script:
    - cd smarty-phpunit
-   - if [[ $TRAVIS_PHP_VERSION = 7.* || $TRAVIS_PHP_VERSION = nightly ]]; then
+   - if [[ $TRAVIS_PHP_VERSION = 7.1 || $TRAVIS_PHP_VERSION = nightly ]]; then
         ./vendor/bin/phpunit;
     else
         phpunit ./;
