Use phpunit 6.4.1 for PHP 7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 script:
    - cd smarty-phpunit
    - if [[ $TRAVIS_PHP_VERSION = 7.1 || $TRAVIS_PHP_VERSION = nightly ]]; then
-        ./vendor/bin/phpunit;
+        ../vendor/bin/phpunit;
     else
         phpunit ./;
     fi
