--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ install:
      - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
 
 script:
+   - cd smarty-phpunit
    - if [[ $TRAVIS_PHP_VERSION = 7.1 || $TRAVIS_PHP_VERSION = nightly ]]; then
-        ./vendor/bin/phpunit;
+        /vendor/bin/phpunit ./;
     else
-        cd smarty-phpunit
         phpunit ./;
     fi
 
