--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ php:
   - 5.6
   - 7.0
   - 7.1
-
+  - 7.2
+  - hhvm
 
 services:
   - memcached
@@ -20,16 +21,19 @@ services:
 before_script:
     - if [ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]; then travis_retry composer --prefer-source --dev install; fi
     - if [ ${TRAVIS_PHP_VERSION:0:3} <= "5.6" ]; then  phpenv config-add travis.ini; fi
-    - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then  composer require phpunit/phpunit 6.4.1; fi
+    - if [[ $TRAVIS_PHP_VERSION = 7.* ]]; then  composer require phpunit/phpunit 6.4.1; fi
     - composer install
     - mysql -e "create database IF NOT EXISTS test;" -uroot
+
+before_install:
+    - phpenv config-rm xdebug.ini || return 0
 
 install:
      - git clone --depth=50 --branch=master git://github.com/smarty-php/smarty-phpunit.git
 
 script:
    - cd smarty-phpunit
-   - if [[ $TRAVIS_PHP_VERSION = 7.1 || $TRAVIS_PHP_VERSION = nightly ]]; then
+   - if [[ $TRAVIS_PHP_VERSION = 7.* ]]; then
         ../vendor/bin/phpunit ./;
     else
         phpunit ./;
