--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
     - if [ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]; then travis_retry composer --prefer-source --dev install; fi
     - if [ ${TRAVIS_PHP_VERSION:0:3} <= "5.6" ]; then  phpenv config-add travis.ini; fi
     - if [[ $TRAVIS_PHP_VERSION = 7.* ]]; then  composer require phpunit/phpunit 6.4.1; fi
-    - composer install
+    - if [ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]; composer install; fi
     - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 before_install:
