--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ services:
   - mysql
 
 before_script:
-    - if [ ${TRAVIS_PHP_VERSION:0:3} = "5.2" ]; then phpenv global 5.3; composer install; phpenv global "$TRAVIS_PHP_VERSION"; fi
+    - if [ ${TRAVIS_PHP_VERSION:0:3} = "5.2" ]; then phpenv global 5.3; travis_retry composer --prefer-source --dev install; phpenv global "$TRAVIS_PHP_VERSION"; fi
     - if [ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]; then travis_retry composer --prefer-source --dev install; fi
     - if [ ${TRAVIS_PHP_VERSION:0:3} <= "5.6" ]; then  phpenv config-add travis.ini; fi
     - if [[ $TRAVIS_PHP_VERSION = 7.* ]]; then  composer require phpunit/phpunit 6.4.1; fi
