Use Composer classmap instead of bootstrap.

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "php": ">=5.2"
     },
     "autoload": {
-            "files": ["libs/bootstrap.php"]
+        "classmap": ["libs/"]
     },
     "extra": {
         "branch-alias": {
